--- a/gallery/index.html
+++ b/gallery/index.html
@@ -13,7 +13,95 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h2>gallery project starter</h2>
+    <!-- Nature -->
+    <section class="section nature">
+      <img
+        src="./images/nature-1.jpeg"
+        alt="nature"
+        title="nature-1"
+        class="img"
+        data-id="1"
+      />
+      <img
+        src="./images/nature-2.jpeg"
+        alt="nature"
+        title="nature-2"
+        class="img"
+        data-id="2"
+      />
+      <img
+        src="./images/nature-3.jpeg"
+        alt="nature"
+        title="nature-3"
+        class="img"
+        data-id="3"
+      />
+    </section>
+    <!-- city-->
+    <section class="sections city">
+      <img
+        src="./images/city-1.jpeg"
+        alt="city"
+        title="city-1"
+        class="img"
+        data-id="1"
+      />
+      <img
+        src="./images/city-2.jpeg"
+        alt="city"
+        title="city-2"
+        class="img"
+        data-id="2"
+      />
+      <img
+        src="./images/city-3.jpeg"
+        alt="city"
+        title="city-3"
+        class="img"
+        data-id="3"
+      />
+      <img
+        src="./images/city-4.jpeg"
+        alt="city"
+        title="city-4"
+        class="img"
+        data-id="4"
+      />
+      <img
+        src="./images/city-5.jpeg"
+        alt="city"
+        title="city-5"
+        class="img"
+        data-id="5"
+      />
+    </section>
+    <!-- Modal -->
+    <div class="modal">
+      <button class="close-btn">
+        <i class="fas fa-times"></i>
+      </button>
+      <div class="modal-content">
+        <!-- prev next button -->
+        <button class="prev-btn">
+          <i class="fas fa-chevron-left"></i></button
+        ><button class="next-btn">
+          <i class="fas fa-chevron-right"></i>
+        </button>
+        <!-- content -->
+        <img src="./images/city-1.jpeg" alt="city" class="main-img" />
+        <h3 class="image-name">Image Name</h3>
+        <div class="modal-images">
+          <img
+            src="./images/city-5.jpeg"
+            alt="city"
+            title="city-5"
+            class="modal-img selected"
+            data-id="5"
+          />
+        </div>
+      </div>
+    </div>
+    <!-- Javascript -->
     <script src="app.js"></script>
   </body>
 </html>
