--- a/Filters/index.html
+++ b/Filters/index.html
@@ -8,7 +8,29 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <h1>filters projects starter</h1>
+    <section class="products">
+      <div class="filters-container">
+        <form action="" class="input-form">
+          <input type="text" class="search-input" placeholder="search..."/>
+        </form>
+        <h5>Company</h5>
+        <article class="companies">
+          <button class="company-btn">All</button>
+          <button class="company-btn">Ikea</button>
+          <button class="company-btn">Marcos</button>
+        </article>
+      </div>
+      <div class="products-container">
+        <article class="product">
+          <img src="https://dl.airtable.com/.attachments/f3450755e165557344f7d6433242431e/93533098/product-1.jpeg" alt="" class="product-img img" />
+          <footer>
+            <h5 class="product-name">albany table</h5>
+            <span class="product-price">$79.99</span>
+          </footer>
+        </article>
+      </div>
+    </section>
+    <script src="./products.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
